kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: drivers-backend
    labels:
        app: drivers-backend
    namespace: blog
spec:
    replicas: 1
    selector:
        matchLabels:
            app: drivers-backend
    template:
        metadata:
            labels:
                app: drivers-backend
        spec:
            containers:
                - name: drivers-backend-service
                  image: drivers_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 7000
                - name: drivers-backend-db
                  image: drivers_backend_db:latest
                  imagePullPolicy: Never
